Fixed feedback visible on print

--- a/src/templates/assets/stylesheets/main/components/_feedback.scss
+++ b/src/templates/assets/stylesheets/main/components/_feedback.scss
@@ -106,4 +106,9 @@
       transform: translateY(0);
     }
   }
+
+  // [print]: Hide feedback
+  @media print {
+    display: none;
+  }
 }
